Fixed explain panel scrollbar

--- a/src/components/ExplainPanel/style.scss
+++ b/src/components/ExplainPanel/style.scss
@@ -25,8 +25,8 @@ $contentColor: white;
   display: flex;
   flex: 1;
   flex-direction: column;
-  overflow-x: scroll;
   background-color: $explainPanelBKColor;
+  width: 100%;
 
   .explain-header {
     display: flex;
@@ -420,8 +420,8 @@ $contentColor: white;
 .explain-view-panel {
   flex: 1;
   background-color: $explainPanelBKColor;
-  margin: 10px;
-  overflow-y: auto;
+  padding: 10px;
+  overflow: auto;
 }
 
 .explain-not-visible {
